--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.3
   shared_preferences: ^0.5.12+4
+  google_sign_in:
 
 dev_dependencies:
   flutter_test:
